[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
]

[tool.black]
line-length = 140
target-version = ['py38']
skip-string-normalization = true

[tool.bumpver]
current_version = "2023.12.23"
version_pattern = "YYYY.MM.PATCH"
commit_message = "ver(financetda): bump version from {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
"src/financetda/__init__.py" = [
    "{version}",
    "{pep440_version}",
]
"docs/conf.py" = [
    "{version}",
    "{pep440_version}",
]
"docs/readme.rst" = [
    "{version}",
    "{pep440_version}",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 110
profile = "black"
