[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = financetda
default_section = THIRDPARTY
forced_separate = test_financetda
skip = .tox,.eggs,ci/templates,build,dist

[metadata]
description-file = README.md
license_files = LICENSE
